--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                         </li>
                                         <li class="list-group-item">
                                           <h4 class="list-group-item-heading">Fish and chips<span class="badge pull-right">9.20 €</span></h4>
-                                          <p class="list-group-item-text">fresh fish and persilled potatoes with a sweet cream sauce
+                                          <p class="list-group-item-text">fresh fish and persilled potatoes with a sweet cream sauce (optionnal : sweet pickles)
                                           </p>
                                         </li>
                                         <li class="list-group-item">
