Ajout d'un plat.

--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@
                                           <p class="list-group-item-text">green cardamom pods , optional, ripe mangos, low-fat natural yoghurt, ice cubes, runny honey
                                           </p>
                                         </li>
+                                        <li class="list-group-item">
+                                            <h4 class="list-group-item-heading">Croque-monsieur<span class="badge pull-right">9.20 €</span></h4>
+                                            <p class="list-group-item-text">french bread with some meat and cheese
+                                            </p>
+                                        </li>
+  
                                     </ul>
                                 </div>
                                 <div class="col-sm-5">
