Rajout de détails : ouverture de futurs restaurants, propriétaires.

--- a/index.html
+++ b/index.html
@@ -124,8 +124,16 @@
 
                             <button type="button" class="btn more" id="more" data-toggle="collapse" data-target="#demo">More</button>
                             <div id="demo" class="collapse">  
-                                <p class="about-history"> Thanks to Boulanger and his imitators, these soups moved from the category of remedy into the category of health food and ultimately into the category of ordinary food. Their existence was predicated on health, not gustatory, requirements.</p>
+                                <p class="about-history"> Thanks to Boulanger and his imitators, these soups moved from the category of remedy into the category of health food and ultimately into the category of ordinary food. Their existence was predicated on health, not gustatory, requirements.
+                                    This restaurant was originally created by Salma ALLAY, Lorette PEREZ and Flavien FOUQUERAY.
+                                    The restaurant brand is currently in the process of planning several openings in the near future. With a focus on providing high-quality food and exceptional service, the brand intends to expand its reach by launching roughly ten new restaurants in key locations across the country. Each venue will feature a unique menu that showcases locally-sourced ingredients and a sophisticated atmosphere that caters to diverse demographics. Careful consideration is being given to everything from menu planning and staffing to décor and marketing, with the ultimate goal of creating an unparalleled dining experience.
+
+                                </p>
                             </div>
+                            <p class="about-history first">
+
+
+                            </p>
                         </div>
                     </div>
                 </div> 
