--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="col-sm-7">
                     <div class="row ">
                         <div class="restaurant-history slideanim text-center">
-                            <h3 class="section-heading">Restaurant Northstreet</h3>
+                            <h3 class="section-heading">Restaurant Northstreet :)</h3>
                             <p class="about-history first">The modern idea of a restaurant – as well as the term itself – appeared in Paris in the 18th century. For centuries Paris had taverns which served food at large common tables, but they were notoriously crowded, noisy, not very clean, and served food of dubious quality. In about 1765 a new kind of eating establishment, called a "Bouillon", was opened on rue des Poulies, near the Louvre, by a man named Boulanger.<br /> <br >
                             It had separate tables, a menu, and specialized in soups made with a base of meat and eggs, which were said to be restaurants or, in English "restoratives". Other similar bouillons soon opened around Paris.
                             In about 1765 a new kind of eating establishment, called a "Bouillon", was opened on rue des Poulies, near the Louvre, by a man named Boulanger.
