--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                         <address class="contact">
                             <span class="span-contact">Call:</span>
                             <br>
-                            +091 1234 5678
+                            +33 7 87 92 65 61
                             <br> 
                             <span class="span-contact">Email:</span> 
                             <br>
@@ -619,7 +619,7 @@
                             <br>
                             22, Northstreet Road
                             <br>
-                            Melbourne, Victoria
+                            Atlanta, Victoria
                             <br>
                             Australia
                         </address>
@@ -637,7 +637,7 @@
                                  <div class="form-group has-feedback">
                                     <label class="sr-only">Last name:</label>
                                     <input type="text" name="surname" class="form-control" placeholder="Last name" required>
-                                    
+                                     
                                 </div>
                                 <div class="form-group has-feedback">
                                     <label class="sr-only">Email:</label>
